--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
   <head>
     <meta charset='utf-8'>
-    <title>#[nada]</title>
-    <link href="/css/main.css" media="all" rel="stylesheet" type="text/css" />
+    <title>Still nada</title>
+    <link href="css/main.css" media="all" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <p>ALL THESE WORLDS ARE YOURS EXCEPT EUROPA</p>
-    <p>ATTEMPT NO LANDING THERE</p>
+    <section><h1 id="raphael-is-designing-something">Raphael is designing something</h1>
+<p>There’s some web stuff to be made, some other Haskell stuff, and some writing too. He’s figuring out what goes where, and rewriting every piece of text until it seems good enough (staring at blank pages, mostly).</p>
+<p>He even played with some watercolor, and sketched some yōkai — But I wouldn’t hold my breath to see something nice, if at all. The lad will figure out soon enough that he’s overdoing it. Take it easy Raph. This is not the Sistine Madonna.</p>
+<p>It will all be ok in the end.</p></section>
   </body>
 </html>
