--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
   <head>
     <meta charset='utf-8'>
-    <title>Still nada</title>
+    <title>the rain never stops</title>
     <link href="css/main.css" media="all" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <section><h1 id="raphael-is-designing-something">Raphael is designing something</h1>
-<p>There’s some web stuff to be made, some other Haskell stuff, and some writing too. He’s figuring out what goes where, and rewriting every piece of text until it seems good enough (staring at blank pages, mostly).</p>
-<p>He even played with some watercolor, and sketched some yōkai — But I wouldn’t hold my breath to see something nice, if at all. The lad will figure out soon enough that he’s overdoing it. Take it easy Raph. This is not the Sistine Madonna.</p>
-<p>It will all be ok in the end.</p></section>
+    <div id="f36eb40">
+      <section id="ac6876b">
+        <h1 id="no-promises">Don't hold your breath</h1>
+      </section>
+    </div>
   </body>
 </html>
