--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Merriweather">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="all" href="css/main.css">
+    <link rel="stylesheet" type="text/css" media="(max-device-width: 900px)" href="css/mobile.css">
     <script type="text/javascript" src="js/breathing-halftone.pkgd.js"></script>
   </head>
   <body>
