Update-not-really-update
This webpage has been neglected for too long. I may or
may not come back to add new info and write something
(like I've been telling myself I'd do for eons).

--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
       <div id="portrait"><img src="img/self.jpeg" data-src="img/self-dots.jpeg"></div>
       <div id="intro">
         <h1>Hi there!</h1>
-        <p>I'm <span id="fullname">Raphael Nova</span>, a brazilian application developer currently working for IBM. I specialize in writing distributed applications using <abbr title="Services Oriented Architecture">SOA</abbr> and Server/Client architecture, mostly for the web. Java and Ruby are the languages I'm more proficient at, but I also use Haskell in my spare time. I like the web, and I want to make it a safer place.</p>
-        <p>I'm based in Campinas, São Paulo.</p>
+        <p>I'm <span class="redacted">██████████</span>, a <span class="redacted">███████████████████</span> currently working for <span class="redacted">███</span>.
+		<span class="redacted">█&#x0200B;██████&#x0200B;█████&#x0200B;███████&#x0200B;████████&#x0200B;███&#x0200B;███&#x0200B;███&#x0200B;████████&#x0200B;████████&#x0200B;█████&#x0200B;██&#x0200B;██&#x0200B;████&#x0200B;███&#x0200B;███&#x0200B;███&#x0200B;███&#x0200B;███&#x0200B;██████&#x0200B;██&#x0200B;████&#x0200B;██████&#x0200B;██&#x0200B;██&#x0200B;█&#x0200B;███&#x0200B;███&#x0200B;█████&#x0200B;█&#x0200B;███&#x0200B;███&#x0200B;███&#x0200B;█&#x0200B;██&#x0200B;██&#x0200B;████&#x0200B;██&#x0200B;█&#x0200B;███&#x0200B;██&#x0200B;████&#x0200B;█&#x0200B;██</span> safer place.</p>
+        <p>I'm based in <span class="redacted">██████████████</span></p>
         <nav>
           <a class="fas fa-envelope-square" href="mailto:contact@raphaelnova.info"></a>
           <a class="fab fa-linkedin" href="https://www.linkedin.com/in/raphaelnova"></a>
